tests/ParseSpec/invalid/expr/double-bind-case.algst
case global of {
  C1 x x -> 0
}
